--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,6 +24,7 @@ jobs:
       PUBLISH_GRAPH_STORE_ENDPOINT: ${{ secrets.GRAPH_STORE_ENDPOINT }}
       PUBLISH_GRAPH_STORE_USER: ${{ secrets.GRAPH_STORE_USER }}
       PUBLISH_GRAPH_STORE_PASSWORD: ${{ secrets.GRAPH_STORE_PASSWORD }}
+      EXECUTION_URL: "https://${{ github.repository }}/actions/runs/${{ github.run_id }}"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1.4.4
@@ -32,11 +33,11 @@ jobs:
       - run: yarn install --ci
       - name: transform pipeline
         if: github.event.inputs.transform_job != ''
-        run: yarn ts-node index.ts transform --job "${{ github.event.inputs.transform_job }}" --execution-url "https://${{ github.repository }}/actions/runs/${{ github.run_id }}" --to ${{ github.event.inputs.to }} --debug
+        run: yarn ts-node index.ts transform --job "${{ github.event.inputs.transform_job }}" --to ${{ github.event.inputs.to }} --debug
         working-directory: cli
       - name: publish pipeline
         if: github.event.inputs.publish_job != ''
-        run: yarn ts-node index.ts publish --job "${{ github.event.inputs.publish_job }}" --execution-url "https://${{ github.repository }}/actions/runs/${{ github.run_id }}" --debug
+        run: yarn ts-node index.ts publish --job "${{ github.event.inputs.publish_job }}" --debug
         working-directory: cli
       - name: Output artifact
         if: github.event.inputs.to == 'filesystem'
