--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -33,11 +33,11 @@ jobs:
       - run: yarn install --ci
       - name: transform pipeline
         if: github.event.inputs.transform_job != ''
-        run: yarn ts-node index.ts transform --job "${{ github.event.inputs.transform_job }}" --to ${{ github.event.inputs.to }} --debug
+        run: yarn ts-node index.ts transform --job "${{ github.event.inputs.transform_job }}" --execution-url ${{ env.EXECUTION_URL }} --to ${{ github.event.inputs.to }} --debug
         working-directory: cli
       - name: publish pipeline
         if: github.event.inputs.publish_job != ''
-        run: yarn ts-node index.ts publish --job "${{ github.event.inputs.publish_job }}" --debug
+        run: yarn ts-node index.ts publish --job "${{ github.event.inputs.publish_job }}" --execution-url ${{ env.EXECUTION_URL }} --debug
         working-directory: cli
       - name: Output artifact
         if: github.event.inputs.to == 'filesystem'
