--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -17,6 +17,8 @@
     "@rdfjs/parser-n3": "^1.1.4",
     "@rdfjs/term-map": "^1.0.0",
     "@rdfjs/term-set": "^1.0.1",
+    "@sentry/node": "^5.29.0",
+    "@sentry/tracing": "^5.29.0",
     "@tpluscode/rdf-ns-builders": "^0.4.0",
     "@tpluscode/rdf-string": "^0.2.21",
     "@tpluscode/rdfine": "^0.5.16",
