--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@cube-creator/model": "*",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "@hydrofoil/shaperone-wc": "^0.2.2",
     "@rdf-esm/data-model": "^0.5.3",
