--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
+  "resolutions": {
+    "barnard59-base": "0.0.5"
+  },
   "mocha": {
     "extension": "ts",
     "recursive": true,
