--- a/.lando.yml
+++ b/.lando.yml
@@ -49,7 +49,7 @@ services:
     type: compose
     ssl: false
     services:
-      image: minio/minio
+      image: minio/minio:RELEASE.2020-12-03T05-49-24Z
       ports:
         - '9000:9000'
       command: usr/bin/docker-entrypoint.sh server /data
