--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -77,6 +77,7 @@
     "@types/merge-stream": "^1.1.2",
     "@types/mocha": "^8.0.3",
     "@types/node-fetch": "^2.5.7",
+    "@types/once": "^1.4.0",
     "@types/rdf-ext": "^1.3.8",
     "@types/rdf-js": "^4.0.0",
     "@types/rdf-transform-triple-to-quad": "^1.0.0",
