feat: use hydra extensions for shaperone

--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -13,6 +13,7 @@
     "@rdfine/hydra": "^0.6.4",
     "@rdfine/schema": "^0.6.3",
     "@rdfjs/express-handler": "^1.2.1",
+    "@rdfjs/fetch": "^2.1.0",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/parser-n3": "^1.1.4",
     "@rdfjs/term-map": "^1.0.0",
@@ -82,6 +83,7 @@
     "@types/rdf-js": "^4.0.0",
     "@types/rdf-transform-triple-to-quad": "^1.0.0",
     "@types/rdfjs__express-handler": "^1.1.1",
+    "@types/rdfjs__fetch": "^2",
     "@types/rdfjs__parser-n3": "^1.1.2",
     "@types/rdfjs__term-map": "^1.0.0",
     "@types/sinon": "^9.0.5",
