--- a/ui/package.json
+++ b/ui/package.json
@@ -17,7 +17,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^2.0.0",
-    "@hydrofoil/shaperone-wc": "^0.2.3",
+    "@hydrofoil/shaperone-core": "^0.4.3",
+    "@hydrofoil/shaperone-hydra": "^0.1.1",
+    "@hydrofoil/shaperone-wc": "^0.2.5",
     "@rdf-esm/data-model": "^0.5.3",
     "@rdf-esm/dataset": "^0.5.1",
     "@rdfine/shacl": "^0.7.4",
@@ -26,7 +28,7 @@
     "@sentry/vue": "^5.29.0",
     "@tpluscode/rdf-ns-builders": "^0.4",
     "@tpluscode/rdfine": "^0.5.19",
-    "alcaeus": "1.0.1",
+    "alcaeus": "^1.1.0",
     "buefy": "^0.9.2",
     "bulma-quickview": "^2.0.0",
     "cookie-storage": "^6.1.0",
