--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "alcaeus": "1.0.1",
     "buefy": "^0.9.2",
     "bulma-quickview": "^2.0.0",
+    "clownface": "^1.0.0",
     "cookie-storage": "^6.1.0",
     "core-js": "^3.6.5",
     "oidc-client": "^1.11.0-beta.2",
