--- a/.lando.yml
+++ b/.lando.yml
@@ -73,6 +73,7 @@ services:
         NODE_TLS_REJECT_UNAUTHORIZED: 0
         # Requires override because port must be used in internal communication
         GRAPH_STORE_ENDPOINT: http://db.cube-creator.lndo.site:3030/cube-creator/data
+        PUBLISH_GRAPH_STORE_ENDPOINT: http://db.cube-creator.lndo.site:3030/cube-creator/data
     moreHttpPorts:
           - 45681
 
