--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "@sentry/vue": "^5.29.0",
     "@tpluscode/rdf-ns-builders": "^0.4",
     "@tpluscode/rdfine": "^0.5.19",
+    "@zazuko/rdf-vocabularies": "^2020.12.16",
     "alcaeus": "^1.1.0",
     "buefy": "^0.9.2",
     "bulma-quickview": "^2.0.0",
