feat(ui): render form help as markdown

--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -31,7 +31,8 @@
     ]
   },
   "files": [
-    "types/global.d.ts"
+    "types/global.d.ts",
+    "types/vue-markdown.d.ts",
   ],
   "include": [
     "src/**/*.ts",
