--- a/ui/package.json
+++ b/ui/package.json
@@ -40,6 +40,7 @@
     "vue-class-component": "^7.2.6",
     "vue-color": "^2.7.1",
     "vue-custom-element": "^3.2.14",
+    "vue-markdown": "^2.2.4",
     "vue-property-decorator": "^9.0.2",
     "vue-router": "^3.4.7",
     "vuex": "^3.4.0",
