--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -57,6 +57,8 @@
     "slug": "^4.0.2",
     "sparql-http-client": "^2.2.2",
     "string-to-stream": "^3.0.1",
+    "through2": "^4.0.2",
+    "merge2": "^1.4.1",
     "uri-template": "^1.0.1",
     "url-slugify": "^1.0.6"
   },
@@ -75,6 +77,7 @@
     "@types/express": "^4.17.8",
     "@types/express-jwt": "^0.0.42",
     "@types/http-errors": "^1.8.0",
+    "@types/merge2": "^1.3.0",
     "@types/merge-stream": "^1.1.2",
     "@types/mocha": "^8.0.3",
     "@types/node-fetch": "^2.5.7",
@@ -91,6 +94,7 @@
     "@types/slug": "^0.9.1",
     "@types/sparql-http-client": "^2",
     "@types/supertest": "^2.0.10",
+    "@types/through2": "^2.0.36",
     "@types/url-slugify": "^1.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
