--- a/cli/.test.env
+++ b/cli/.test.env
@@ -1,4 +1,5 @@
 TRANSFORM_JOB=https://cube-creator.lndo.site/cube-project/ubd/csv-mapping/jobs/test-job
+PUBLISH_JOB=https://cube-creator.lndo.site/cube-project/ubd/csv-mapping/jobs/test-publish-job
 
 AUTH_RUNNER_CLIENT_ID=cube-creator-runner
 AUTH_RUNNER_ISSUER=https://keycloak.zazukoians.org/realms/zazuko-dev
