--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -66,6 +66,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@babel/register": "^7.11.5",
+    "@cube-creator/testing": "*",
     "@types/absolute-url": "^1.2.0",
     "@types/chai": "^4.2.13",
     "@types/chai-as-promised": "^7.1.3",
