--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@changesets/cli": "^2.14.0",
     "@tpluscode/eslint-config": "^0.1.1",
     "@types/node": "^14.14.7",
     "@types/webpack-env": "^1.15.3",
