--- a/.local.env
+++ b/.local.env
@@ -30,3 +30,11 @@ AWS_SECRET_ACCESS_KEY=password
 # Pipelines
 PIPELINE_TYPE=local # local | github | gitlab
 PIPELINE_URI=http://pipeline.cube-creator.lndo.site
+
+# Managed Dimensions
+MANAGED_DIMENSIONS_GRAPH=https://lindas.admin.ch/cube/dimension
+MANAGED_DIMENSIONS_SOURCE=https://test.lindas.admin.ch/query
+MANAGED_DIMENSIONS_BASE=https://cube-creator.lndo.site/managed-dimensions/
+MANAGED_DIMENSIONS_STORE_ENDPOINT=http://store:3030/managed-dimensions/query
+MANAGED_DIMENSIONS_STORE_UPDATE_ENDPOINT=http://store:3030/managed-dimensions/update
+MANAGED_DIMENSIONS_STORE_GRAPH_ENDPOINT=http://store:3030/managed-dimensions/data
