--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "dependencies": {
     "@rdf-esm/namespace": "^0.5.2",
-    "@zazuko/rdf-vocabularies": "^2020.12.16"
+    "@rdfjs/parser-n3": "^1.1.4",
+    "@tpluscode/rdf-string": "^0.2.21",
+    "@zazuko/rdf-vocabularies": "^2020.12.16",
+    "rdf-ext": "^1.3.0",
+    "sparql-http-client": "^2.2.2",
+    "string-to-stream": "^3.0.1"
   },
   "devDependencies": {
     "@types/rdf-js": "^4.0.0",
