refactor: how managed dimensions are loaded
as discussed with @l00mi:

- any graph in the configured endpoint is searched
- must be `a schema:DefinedTermSet, md:ManagedDimension`
- removed cantons and added synthetic sample managed dimension

--- a/.lando.yml
+++ b/.lando.yml
@@ -7,7 +7,7 @@ services:
     type: node:custom
     build:
       - npm i -g nodemon
-    command: nodemon -w packages -w apis --verbose --ext ts,ttl,js,trig --ignore **/*.spec.ts --ignore **/*.spec-graphs.ts --exec node --inspect=0.0.0.0:45671 -r ts-node/register --inspect apis/core/index.ts
+    command: nodemon -w packages -w apis --verbose --ext ts,ttl,js,trig --ignore **/*.test.ts --ignore **/*.spec-graphs.ts --exec node --inspect=0.0.0.0:45671 -r ts-node/register --inspect apis/core/index.ts
     port: 45670
     ssl: true
     overrides:
