--- a/apis/managed-dimensions/package.json
+++ b/apis/managed-dimensions/package.json
@@ -17,5 +17,10 @@
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
     "sparql-http-client": "^2.2.2"
+  },
+  "devDependencies": {
+    "@cube-creator/testing": "*",
+    "mocha": "^8.1.3",
+    "chai": "^4.2.0"
   }
 }
