--- a/cli/package.json
+++ b/cli/package.json
@@ -25,7 +25,7 @@
     "alcaeus": "^1.0.1",
     "aws-sdk": "^2.559.0",
     "barnard59": "^0.1.2",
-    "barnard59-base": "^0.1.0",
+    "barnard59-base": "zazuko/barnard59-base#master",
     "barnard59-formats": "^0.1.0",
     "barnard59-graph-store": "^0.1.0",
     "barnard59-rdf": "zazuko/barnard59-rdf#cube-to-observation",
@@ -39,6 +39,8 @@
     "get-stream": "^5.1.0",
     "is-stream": "^2.0.0",
     "middleware-async": "^1.2.7",
+    "nanoid": "^3.1.20",
+    "nanoid-dictionary": "^4.2.0",
     "node-fetch": "^2.6.1",
     "null-writable": "^1.0.5",
     "once": "^1.4.0",
@@ -64,6 +66,7 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
     "@types/mocha": "^8.0.3",
+    "@types/nanoid-dictionary": "^4.2.0",
     "@types/node-fetch": "^2.5.7",
     "@types/once": "^1.4.0",
     "@types/rdf-ext": "^1.3.5",
