--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -51,7 +51,7 @@
     "nanoid": "^3.1.16",
     "node-fetch": "^2.6.1",
     "once": "^1.4.0",
-    "rdf-cube-view-query": "zazuko/rdf-cube-view-query",
+    "rdf-cube-view-query": "^1",
     "rdf-ext": "^1.3.0",
     "rdf-validate-shacl": "^0.2.3",
     "set-link": "^1.0.0",
