--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -39,7 +39,8 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "../packages/model/**/*"
   ],
   "exclude": [
     "node_modules",
