--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
         with:
           node-version: 14
       - run: yarn install --ci
-      - run: yarn test      
+      - run: yarn test
       - name: Install lando
         run: sh e2e-tests/install-lando.sh
       - name: Start site
@@ -36,6 +36,7 @@ jobs:
           node-version: 13
       - run: yarn install --ci
       - run: yarn lint
+      - run: yarn workspace @cube-creator/ui lint
 
   e2e-tests:
     runs-on: [ubuntu-latest]
@@ -60,7 +61,7 @@ jobs:
         run: lando logs -s core
 
       - name: UI e2e tests
-        run: yarn --cwd ui test:e2e --url https://app.cube-creator.lndo.site --headless
+        run: yarn workspace @cube-creator/ui test:e2e --url https://app.cube-creator.lndo.site --headless
       - name: Save Cypress videos
         uses: actions/upload-artifact@v2
         if: failure()
