--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "@hydrofoil/shaperone-wc": "^0.3.5",
     "@rdf-esm/data-model": "^0.5.3",
     "@rdf-esm/dataset": "^0.5.1",
+    "@rdfine/schema": "^0.6.3",
     "@rdfine/shacl": "^0.7.4",
     "@rdfjs-elements/rdf-editor": "^0.3.4",
     "@sentry/tracing": "^5.29.0",
@@ -32,6 +33,7 @@
     "alcaeus": "^1.1.0",
     "buefy": "^0.9.2",
     "bulma-quickview": "^2.0.0",
+    "clownface": "^1.2.0",
     "cookie-storage": "^6.1.0",
     "core-js": "^3.6.5",
     "oidc-client": "^1.11.0-beta.2",
