chore: use GitHub app in changeset PR

--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -21,10 +21,17 @@ jobs:
 
       - run: yarn
 
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.GH_APP_ID }}
+          private_key: ${{ secrets.GH_PRIVATE_KEY }}
+
       - name: Create Release Pull Request
         uses: changesets/action@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
         with:
           commit: "chore: release"
           title: "Merge to release"
