--- a/cli/package.json
+++ b/cli/package.json
@@ -46,6 +46,7 @@
     "null-writable": "^1.0.5",
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
+    "rdf-parser-csvw": "^0.14.2",
     "rdf-stream-to-dataset-stream": "^1.0.0",
     "readable-stream": "^3.6.0",
     "string-to-stream": "^3.0.1",
