--- a/ui/package.json
+++ b/ui/package.json
@@ -36,7 +36,7 @@
     "clownface": "^1.2.0",
     "cookie-storage": "^6.1.0",
     "core-js": "^3.6.5",
-    "oidc-client": "^1.11.0-beta.2",
+    "oidc-client": "^1.11.0",
     "slugify": "^1.4.6",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
