--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -41,10 +41,12 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-jwt-permissions": "^1.3.3",
+    "express-rdf-request": "0.0.0",
     "http-errors": "^1.8.0",
     "http-problem-details": "^0.1.5",
     "http-problem-details-mapper": "^0.1.6",
     "hydra-box": "^0.6.1",
+    "hydra-box-middleware-shacl": "0.0.0",
     "is-stream": "^2",
     "is-uri": "^1.2.0",
     "jwks-rsa": "^1.9.0",
@@ -55,7 +57,6 @@
     "once": "^1.4.0",
     "rdf-cube-view-query": "^1",
     "rdf-ext": "^1.3.0",
-    "rdf-validate-shacl": "^0.2.3",
     "set-link": "^1.0.0",
     "slug": "^4.0.2",
     "sparql-http-client": "^2.2.2",
