--- a/apis/managed-dimensions/package.json
+++ b/apis/managed-dimensions/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "@cube-creator/core": "*",
     "@hydrofoil/labyrinth": "^0.4",
+    "@rdfine/shacl": "^0.7.4",
     "@tpluscode/rdf-ns-builders": "^0.4.0",
     "@tpluscode/rdf-string": "^0.2.21",
     "@tpluscode/sparql-builder": "^0.3.10",
     "@rdfjs/namespace": "^1.1.0",
+    "@rdfjs/term-map": "^1.0.0",
     "@rdfjs/term-set": "^1.0.1",
     "clownface": "^1.2.0",
     "debug": "^4.3.1",
     "http-errors": "^1.8.0",
+    "hydra-box-middleware-shacl": "0.0.0",
     "middleware-async": "^1.2.7",
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
