--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@cube-creator/core": "*",
+    "@cube-creator/api-errors": "0.0.0",
     "@cube-creator/model": "*",
     "@cube-creator/managed-dimensions-api": "*",
     "@hydrofoil/labyrinth": "^0.4",
@@ -43,8 +44,6 @@
     "express-jwt-permissions": "^1.3.3",
     "express-rdf-request": "0.0.0",
     "http-errors": "^1.8.0",
-    "http-problem-details": "^0.1.5",
-    "http-problem-details-mapper": "^0.1.6",
     "hydra-box": "^0.6.1",
     "hydra-box-middleware-shacl": "0.0.0",
     "is-stream": "^2",
