--- a/apis/managed-dimensions/package.json
+++ b/apis/managed-dimensions/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@cube-creator/core": "*",
     "@hydrofoil/labyrinth": "^0.4",
+    "@rdfine/schema": "^0.6.3",
+    "@cube-creator/api-errors": "0.0.0",
     "@rdfine/shacl": "^0.7.4",
     "@tpluscode/rdf-ns-builders": "^0.4.0",
     "@tpluscode/rdf-string": "^0.2.21",
-    "@tpluscode/sparql-builder": "^0.3.10",
+    "@tpluscode/sparql-builder": "^0.3.11",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/term-map": "^1.0.0",
     "@rdfjs/term-set": "^1.0.1",
@@ -19,11 +21,13 @@
     "middleware-async": "^1.2.7",
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
+    "url-slugify": "^1.0.6",
     "sparql-http-client": "^2.2.2"
   },
   "devDependencies": {
     "@cube-creator/testing": "*",
     "mocha": "^8.1.3",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "sinon": "^9.0.3"
   }
 }
