--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@rdf-esm/data-model": "^0.5.4",
     "@rdf-esm/namespace": "^0.5.2",
     "@rdfjs/parser-n3": "^1.1.4",
     "@tpluscode/rdf-string": "^0.2.21",
