wip: create dimension API endpoint

--- a/apis/managed-dimensions/package.json
+++ b/apis/managed-dimensions/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@cube-creator/core": "*",
-    "@hydrofoil/labyrinth": "^0.4",
+    "@hydrofoil/labyrinth": "^0.4.1",
     "@rdfine/schema": "^0.6.3",
     "@cube-creator/api-errors": "0.0.0",
     "@rdfine/shacl": "^0.7.4",
     "@tpluscode/rdf-ns-builders": "^0.4.0",
     "@tpluscode/rdf-string": "^0.2.21",
+    "@tpluscode/rdfine": "^0.5.22",
     "@tpluscode/sparql-builder": "^0.3.11",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/term-map": "^1.0.0",
