--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -10,7 +10,7 @@
     "@cube-creator/api-errors": "0.0.0",
     "@cube-creator/model": "*",
     "@cube-creator/managed-dimensions-api": "*",
-    "@hydrofoil/labyrinth": "^0.4",
+    "@hydrofoil/labyrinth": "^0.4.1",
     "@rdfine/csvw": "^0.6.3",
     "@rdfine/hydra": "^0.6.4",
     "@rdfine/prov": "^0.1.1",
@@ -25,7 +25,7 @@
     "@sentry/tracing": "^5.29.0",
     "@tpluscode/rdf-ns-builders": "^0.4.0",
     "@tpluscode/rdf-string": "^0.2.21",
-    "@tpluscode/rdfine": "^0.5.22",
+    "@tpluscode/rdfine": "^0.5.23",
     "@tpluscode/sparql-builder": "^0.3.9",
     "@types/content-disposition": "^0.5.3",
     "@types/rdfjs__term-set": "^1.0.2",
@@ -44,7 +44,7 @@
     "express-jwt-permissions": "^1.3.3",
     "express-rdf-request": "0.0.0",
     "http-errors": "^1.8.0",
-    "hydra-box": "^0.6.1",
+    "hydra-box": "zazuko/hydra-box#subpath-api-link",
     "hydra-box-middleware-shacl": "0.0.0",
     "is-stream": "^2",
     "is-uri": "^1.2.0",
