--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/rdf-js": "^4.0.0",
     "@types/rdfjs__namespace": "^1.1.3",
-    "@types/rdfjs__parser-n3": "^1.1.2"
+    "@types/rdfjs__parser-n3": "^1.1.2",
+    "@types/sparql-http-client": "^2.2.5"
   }
 }
