--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -40,6 +40,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx",
+    "../packages/core/**/*",
     "../packages/model/**/*"
   ],
   "exclude": [
