--- a/apis/managed-dimensions/package.json
+++ b/apis/managed-dimensions/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@cube-creator/testing": "*",
+    "@types/sinon": "^9.0.10",
     "mocha": "^8.1.3",
     "chai": "^4.2.0",
     "sinon": "^9.0.3"
