--- a/apis/managed-dimensions/package.json
+++ b/apis/managed-dimensions/package.json
@@ -12,12 +12,14 @@
     "@tpluscode/rdf-string": "^0.2.21",
     "@tpluscode/rdfine": "^0.5.24",
     "@tpluscode/sparql-builder": "^0.3.11",
+    "@rdfjs/formats-common": "^2.1.0",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/term-map": "^1.0.0",
     "@rdfjs/term-set": "^1.0.1",
     "clownface": "^1.2.0",
     "debug": "^4.3.1",
     "http-errors": "^1.8.0",
+    "http-status": "^1.5.0",
     "hydra-box-middleware-shacl": "1.0.0",
     "middleware-async": "^1.2.7",
     "once": "^1.4.0",
@@ -30,6 +32,7 @@
     "@types/sinon": "^9.0.10",
     "mocha": "^8.1.3",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "sinon": "^9.0.3"
   }
 }
