--- a/apis/managed-dimensions/package.json
+++ b/apis/managed-dimensions/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@cube-creator/core": "*",
+    "@cube-creator/core": "^0.2.0",
     "@hydrofoil/labyrinth": "^0.4.1",
     "@rdfine/schema": "^0.6.3",
     "@cube-creator/api-errors": "0.0.0",
@@ -29,7 +29,7 @@
     "sparql-http-client": "^2.2.2"
   },
   "devDependencies": {
-    "@cube-creator/testing": "*",
+    "@cube-creator/testing": "^0.1.15",
     "@types/sinon": "^9.0.10",
     "mocha": "^8.1.3",
     "chai": "^4.2.0",
