--- a/packages/express-rdf-request/package.json
+++ b/packages/express-rdf-request/package.json
@@ -13,7 +13,7 @@
     "hydra-box": "^0.6"
   },
   "devDependencies": {
-    "@cube-creator/testing": "*",
+    "@cube-creator/testing": "^0.1.15",
     "@tpluscode/rdf-string": "^0.2.21",
     "chai": "^4.2.0",
     "chai-snapshot-matcher": "^1.0.6",
