--- a/packages/shacl-middleware/package.json
+++ b/packages/shacl-middleware/package.json
@@ -17,7 +17,7 @@
     "express-rdf-request": "0.1.0"
   },
   "devDependencies": {
-    "@cube-creator/testing": "*",
+    "@cube-creator/testing": "^0.1.15",
     "@rdfjs/term-map": "^1.0.0",
     "@tpluscode/rdf-string": "^0.2.21",
     "@types/rdf-js": "^4",
