--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
     "@rdfine/schema": "^0.6.3",
     "@rdfine/shacl": "^0.7.4",
     "@rdfjs-elements/rdf-editor": "^0.3.4",
+    "@rdfjs/term-set": "^1.0.1",
     "@sentry/tracing": "^5.29.0",
     "@sentry/vue": "^5.29.0",
     "@tpluscode/rdf-ns-builders": "^0.4",
@@ -55,6 +56,7 @@
     "@types/clownface": "^1.0.3",
     "@types/rdf-js": "^4",
     "@types/rdfjs__dataset": "^1.0.4",
+    "@types/rdfjs__term-set": "^1.0.2",
     "@types/vue-color": "^2.4.3",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
