--- a/cli/package.json
+++ b/cli/package.json
@@ -48,6 +48,7 @@
     "rdf-ext": "^1.3.0",
     "rdf-parser-csvw": "^0.14.2",
     "rdf-stream-to-dataset-stream": "^1.0.0",
+    "rdf-validate-datatype": "^0.1.3",
     "readable-stream": "^3.6.0",
     "string-to-stream": "^3.0.1",
     "through2": "^4.0.2",
