fix: could not save form with external terms which do not dereference

--- a/.local.env
+++ b/.local.env
@@ -8,6 +8,7 @@ UI_BASE=https://app.cube-creator.lndo.site/
 STORE_QUERY_ENDPOINT=http://store:3030/cube-creator/query
 STORE_UPDATE_ENDPOINT=http://store:3030/cube-creator/update
 STORE_GRAPH_ENDPOINT=http://store:3030/cube-creator/data
+PUBLIC_QUERY_ENDPOINT=https://test.lindas.admin.ch/query
 
 # AuthN config
 AUTH_AUDIENCE=cube-creator
