--- a/packages/shacl-middleware/package.json
+++ b/packages/shacl-middleware/package.json
@@ -21,6 +21,7 @@
     "@rdfjs/term-map": "^1.0.0",
     "@tpluscode/rdf-string": "^0.2.21",
     "@types/rdf-js": "^4",
+    "@types/rdf-validate-shacl": "^0.2.0",
     "mocha": "^8.1.3",
     "supertest": "^4.0.2"
   }
