--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "@cube-creator/api-errors": "0.0.1",
-    "@cube-creator/core": "^0.3.0",
-    "@cube-creator/model": "^0.1.17",
-    "@cube-creator/shared-dimensions-api": "^0.3.0",
+    "@cube-creator/core": "0.3.0",
+    "@cube-creator/model": "0.1.17",
+    "@cube-creator/shared-dimensions-api": "0.3.0",
     "@hydrofoil/labyrinth": "^0.4.1",
     "@rdfine/csvw": "^0.6.3",
     "@rdfine/hydra": "^0.6.4",
