--- a/cli/package.json
+++ b/cli/package.json
@@ -10,8 +10,8 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@cube-creator/core": "^0.3.0",
-    "@cube-creator/model": "^0.1.17",
+    "@cube-creator/core": "0.3.0",
+    "@cube-creator/model": "0.1.17",
     "@rdfine/csvw": "^0.6.3",
     "@rdfine/prov": "^0.1.1",
     "@rdfine/schema": "^0.6.3",
