--- a/cli/package.json
+++ b/cli/package.json
@@ -4,7 +4,7 @@
   "description": "Runs a pipeline to create an RDF data cube",
   "main": "index.js",
   "scripts": {
-    "postinstall": "touch .env",
+    "postinstall": "mkdir -p output; touch .env",
     "transform": "dotenv -e ./.env -e ./.test.env -- sh -c 'ts-node index.ts transform --job \"$TRANSFORM_JOB\" --debug --to filesystem'",
     "publish": "dotenv -e ./.env -e ./.test.env -- sh -c 'ts-node index.ts publish --job \"$PUBLISH_JOB\" --debug'",
     "build": "tsc"
@@ -45,14 +45,12 @@
     "node-fetch": "^2.6.1",
     "null-writable": "^1.0.5",
     "once": "^1.4.0",
-    "polly-js": "^1.8.1",
     "rdf-ext": "^1.3.0",
     "rdf-parser-csvw": "^0.14.2",
     "rdf-stream-to-dataset-stream": "^1.0.0",
     "rdf-validate-datatype": "^0.1.3",
     "readable-stream": "^3.6.0",
     "string-to-stream": "^3.0.1",
-    "tempy": "^1",
     "through2": "^4.0.2",
     "through2-reduce": "1.1.1"
   },
