--- a/cli/package.json
+++ b/cli/package.json
@@ -28,7 +28,7 @@
     "barnard59": "^0.1.2",
     "barnard59-base": "^0.1.1",
     "barnard59-formats": "^0.1.1",
-    "barnard59-graph-store": "zazuko/barnard59-graph-store#fix-performance",
+    "barnard59-graph-store": "^0.1.1",
     "barnard59-rdf": "^0.2.0",
     "body-parser": "^1.19.0",
     "clownface": "^1",
