refactor: make Trifid a configuration variable

--- a/.local.env
+++ b/.local.env
@@ -9,6 +9,7 @@ STORE_QUERY_ENDPOINT=http://store:3030/cube-creator/query
 STORE_UPDATE_ENDPOINT=http://store:3030/cube-creator/update
 STORE_GRAPH_ENDPOINT=http://store:3030/cube-creator/data
 PUBLIC_QUERY_ENDPOINT=https://test.lindas.admin.ch/query
+TRIFID_UI=https://lindas.admin.ch/sparql
 
 # AuthN config
 AUTH_AUDIENCE=cube-creator
