fix: make it work with path in BASE uri

--- a/.local.env
+++ b/.local.env
@@ -35,7 +35,7 @@ PIPELINE_URI=http://pipeline.cube-creator.lndo.site
 # Shared Dimensions
 MANAGED_DIMENSIONS_GRAPH=https://lindas.admin.ch/cube/dimension
 MANAGED_DIMENSIONS_API_BASE=https://cube-creator.lndo.site/
-MANAGED_DIMENSIONS_BASE=https://ld.admin.ch/
+MANAGED_DIMENSIONS_BASE=https://ld.admin.ch/cube/
 MANAGED_DIMENSIONS_STORE_QUERY_ENDPOINT=http://store:3030/shared-dimensions/query
 MANAGED_DIMENSIONS_STORE_UPDATE_ENDPOINT=http://store:3030/shared-dimensions/update
 MANAGED_DIMENSIONS_STORE_GRAPH_ENDPOINT=http://store:3030/shared-dimensions/data
