--- a/ui/package.json
+++ b/ui/package.json
@@ -35,6 +35,7 @@
     "buefy": "^0.9.5",
     "bulma-quickview": "^2.0.0",
     "clownface": "^1.2.0",
+    "clownface-shacl-path": "^1.0.1",
     "cookie-storage": "^6.1.0",
     "core-js": "^3.6.5",
     "oidc-client": "^1.11.0",
