chore: prepare local PX cube for importing

--- a/.local.env
+++ b/.local.env
@@ -40,3 +40,9 @@ MANAGED_DIMENSIONS_BASE=https://ld.admin.ch/cube/
 MANAGED_DIMENSIONS_STORE_QUERY_ENDPOINT=http://store:3030/shared-dimensions/query
 MANAGED_DIMENSIONS_STORE_UPDATE_ENDPOINT=http://store:3030/shared-dimensions/update
 MANAGED_DIMENSIONS_STORE_GRAPH_ENDPOINT=http://store:3030/shared-dimensions/data
+
+# PX Cube sample
+PX_CUBE_BASE=http://example.org/px-cube/
+PX_CUBE_GRAPH=http://example.org/px-cube
+PX_CUBE_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/px-cube/query
+PX_CUBE_GRAPH_ENDPOINT=http://db.cube-creator.lndo.site/px-cube/data
