fix(cli): setting expiry of previous cubes

--- a/cli/.test.env
+++ b/cli/.test.env
@@ -9,6 +9,7 @@ GRAPH_STORE_USER=admin
 GRAPH_STORE_PASSWORD=password
 
 PUBLISH_GRAPH_STORE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
+PUBLISH_GRAPH_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator
 PUBLISH_GRAPH_STORE_USER=admin
 PUBLISH_GRAPH_STORE_PASSWORD=password
 
