feat: initialize dimension metadata resource

--- a/cli/package.json
+++ b/cli/package.json
@@ -54,8 +54,7 @@
     "sparql-http-client": "^2.2",
     "string-to-stream": "^3.0.1",
     "through2": "^4.0.2",
-    "through2-reduce": "1.1.1",
-    "sparql-http-client": "^2.2"
+    "through2-reduce": "1.1.1"
   },
   "devDependencies": {
     "@cube-creator/testing": "^0.1.17",
