--- a/cli/package.json
+++ b/cli/package.json
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "get-stream": "^5.1.0",
     "is-stream": "^2.0.0",
+    "merge2": "^1.4.1",
     "middleware-async": "^1.2.7",
     "nanoid": "^3.1.20",
     "nanoid-dictionary": "^4.2.0",
