--- a/cli/package.json
+++ b/cli/package.json
@@ -70,6 +70,7 @@
     "@types/cors": "^2.8.7",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
+    "@types/merge2": "^1.3.0",
     "@types/mocha": "^8.0.3",
     "@types/nanoid-dictionary": "^4.2.0",
     "@types/node-fetch": "^2.5.7",
