--- a/.local.env
+++ b/.local.env
@@ -42,7 +42,7 @@ MANAGED_DIMENSIONS_STORE_UPDATE_ENDPOINT=http://store:3030/shared-dimensions/upd
 MANAGED_DIMENSIONS_STORE_GRAPH_ENDPOINT=http://store:3030/shared-dimensions/data
 
 # PX Cube sample
-PX_CUBE_BASE=http://example.org/px-cube/
+PX_CUBE_BASE=https://environment.ld.admin.ch/foen/example/px-cube/
 PX_CUBE_GRAPH=http://example.org/px-cube
 PX_CUBE_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/px-cube/query
 PX_CUBE_GRAPH_ENDPOINT=http://db.cube-creator.lndo.site/px-cube/data
