--- a/apis/shared-dimensions/package.json
+++ b/apis/shared-dimensions/package.json
@@ -27,6 +27,7 @@
     "middleware-async": "^1.2.7",
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
+    "rdf-literal": "^1.2.0",
     "sparql-http-client": "^2.2.2"
   },
   "devDependencies": {
