--- a/apis/shared-dimensions/package.json
+++ b/apis/shared-dimensions/package.json
@@ -25,6 +25,7 @@
     "http-status": "^1.5.0",
     "hydra-box-middleware-shacl": "1.0.0",
     "middleware-async": "^1.2.7",
+    "nanoid": "^3.1.23",
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
     "rdf-literal": "^1.2.0",
