--- a/ui/package.json
+++ b/ui/package.json
@@ -38,6 +38,7 @@
     "clownface-shacl-path": "^1.0.1",
     "cookie-storage": "^6.1.0",
     "core-js": "^3.6.5",
+    "debounce": "^1.2.1",
     "oidc-client": "^1.11.0",
     "slugify": "^1.4.6",
     "vue": "^2.6.11",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.4.10",
     "@types/clownface": "^1.0.3",
+    "@types/debounce": "^1.2.0",
     "@types/rdf-js": "^4",
     "@types/rdfjs__dataset": "^1.0.4",
     "@types/rdfjs__term-set": "^1.0.2",
