--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,9 @@
     "@sentry/vue": "^6.2.0",
     "@tpluscode/rdf-ns-builders": "^0.4",
     "@tpluscode/rdfine": "^0.5.19",
+    "@uppy/aws-s3-multipart": "^1.8.18",
+    "@uppy/core": "^1.19.2",
+    "@uppy/vue": "^0.2.5",
     "@zazuko/rdf-vocabularies": "^2021.3.17",
     "alcaeus": "^1.1.3",
     "buefy": "^0.9.5",
