--- a/apis/shared-dimensions/package.json
+++ b/apis/shared-dimensions/package.json
@@ -29,7 +29,8 @@
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
     "rdf-literal": "^1.2.0",
-    "sparql-http-client": "^2.2.2"
+    "sparql-http-client": "^2.2.2",
+    "through2": "^2.0.5"
   },
   "devDependencies": {
     "@cube-creator/testing": "^0.1.18",
