feat: add quad metrics and prometheus

--- a/.local.env
+++ b/.local.env
@@ -33,6 +33,7 @@ AWS_SECRET_ACCESS_KEY=password
 PIPELINE_TYPE=local # local | github | gitlab
 PIPELINE_URI=http://pipeline.cube-creator.lndo.site
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://otel.cube-creator.lndo.site/v1/traces
+OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=http://otel.cube-creator.lndo.site/v1/metrics
 
 # Shared Dimensions
 MANAGED_DIMENSIONS_GRAPH=https://lindas.admin.ch/cube/dimension
