--- a/.lando.yml
+++ b/.lando.yml
@@ -87,6 +87,14 @@ services:
     services:
       image: jaegertracing/all-in-one:1.22
       command: /go/bin/all-in-one-linux --sampling.strategies-file=/etc/jaeger/sampling_strategies.json
+  prometheus:
+    type: compose
+    scanner: false
+    services:
+      image: prom/prometheus:v2.26.0
+      command: /bin/prometheus --config.file=/prometheus.yaml --web.enable-lifecycle
+      volumes:
+        - ./otel/prometheus.yaml:/prometheus.yaml:ro
 
 proxy:
   store:
@@ -103,3 +111,5 @@ proxy:
     - otel.cube-creator.lndo.site:55681
   jaeger:
     - jaeger.cube-creator.lndo.site:16686
+  prometheus:
+    - prometheus.cube-creator.lndo.site:9090
