--- a/otel/collector.yaml
+++ b/otel/collector.yaml
@@ -8,7 +8,8 @@ exporters:
   jaeger:
     endpoint: jaeger:14250
     insecure: true
-  logging:
+  prometheus:
+    endpoint: "0.0.0.0:8889"
 
 processors:
   batch:
@@ -21,4 +22,5 @@ service:
       exporters: [jaeger]
     metrics:
       receivers: [otlp]
-      exporters: [logging]
+      processors: [batch]
+      exporters: [prometheus]
