--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -15,7 +15,7 @@ jobs:
           # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
 
-      - uses: actions/setup-node@master
+      - uses: actions/setup-node@2.4.0
         with:
           node-version: 14
 
