fix: ensure OTEL SDK is init before doing anything
This allows to use the SDK to create the meters instead of creating the
collector exporter separately. It also attaches the traceID/spanID to
log entries properly

--- a/cli/package.json
+++ b/cli/package.json
@@ -13,10 +13,11 @@
     "@cube-creator/core": "0.3.2",
     "@cube-creator/model": "0.1.19",
     "@opentelemetry/api": "^1.0.0",
+    "@opentelemetry/api-metrics": "^0.22.0",
     "@opentelemetry/exporter-collector": "^0.22.0",
     "@opentelemetry/instrumentation-http": "^0.22.0",
     "@opentelemetry/instrumentation-winston": "^0.22.0",
-    "@opentelemetry/metrics": "0.22.0",
+    "@opentelemetry/metrics": "^0.22.0",
     "@opentelemetry/resources": "^0.22.0",
     "@opentelemetry/sdk-node": "^0.22.0",
     "@opentelemetry/semantic-conventions": "^0.22.0",
