chore: have process details exported to prometheus

--- a/otel/collector.yaml
+++ b/otel/collector.yaml
@@ -10,6 +10,8 @@ exporters:
     insecure: true
   prometheus:
     endpoint: "0.0.0.0:8889"
+    resource_to_telemetry_conversion:
+      enabled: true
 
 processors:
   batch:
