feat: export shared dimension

--- a/apis/shared-dimensions/package.json
+++ b/apis/shared-dimensions/package.json
@@ -9,6 +9,7 @@
     "@rdfine/rdfs": "^0.6.4",
     "@rdfine/schema": "^0.6.3",
     "@rdfine/shacl": "^0.8",
+    "@rdfjs-elements/formats-pretty": "^0.3.2",
     "@rdfjs/formats-common": "^2.1.0",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/term-map": "^1.0.0",
@@ -19,6 +20,7 @@
     "@tpluscode/sparql-builder": "^0.3.15",
     "camouflage-rewrite": "^1.2.0",
     "clownface": "^1.2.0",
+    "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
