--- a/.github/workflows/docker-app.yaml
+++ b/.github/workflows/docker-app.yaml
@@ -62,3 +62,4 @@ jobs:
           SENTRY_PROJECT: cube-creator-app
         with:
           version_prefix: cube-creator-app@
+          ignore_empty: true
