feat: optimize full-text query when mapping dimension terms

--- a/.local.env
+++ b/.local.env
@@ -8,6 +8,7 @@ UI_BASE=https://app.cube-creator.lndo.site/
 STORE_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/query
 STORE_UPDATE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/update
 STORE_GRAPH_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
+STORE_ENGINE=fuseki
 PUBLIC_QUERY_ENDPOINT=https://test.lindas.admin.ch/query
 TRIFID_UI=https://lindas.admin.ch/sparql
 VISUALIZE_UI=https://visualize.admin.ch
@@ -43,6 +44,7 @@ MANAGED_DIMENSIONS_BASE=https://ld.admin.ch/cube/
 MANAGED_DIMENSIONS_STORE_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/shared-dimensions/query
 MANAGED_DIMENSIONS_STORE_UPDATE_ENDPOINT=http://db.cube-creator.lndo.site/shared-dimensions/update
 MANAGED_DIMENSIONS_STORE_GRAPH_ENDPOINT=http://db.cube-creator.lndo.site/shared-dimensions/data
+MANAGED_DIMENSIONS_STORE_ENGINE=fuseki
 
 # PX Cube sample
 PX_CUBE_BASE=https://environment.ld.admin.ch/foen/example/px-cube/
