refactor: use meta:nextInHierarchy from root level

--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -33,6 +33,12 @@
       "env": {
         "jest": true
       }
+    },
+    {
+      "files": ["*.test.ts"],
+      "rules": {
+        "no-unused-expressions": "off"
+      }
     }
   ]
 }
